--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>To Do List</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/js/bootstrap.js">
+    <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
@@ -18,7 +19,7 @@
     </div>
 
     <div class = 'listItems'></div>
-
+    
     <script src="node_modules/jquery/dist/jquery.js" charset="utf-8"></script>
     <script src="node_modules/underscore/underscore.js" charset="utf-8"></script>
     <script src="templates.js" charset="utf-8"></script>
