changed the input box

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div class="form-group">
       <h1>To-Do <small>List</small></h1>
       <form role="form">
-          <textarea name="" class = "input-area" cols="40" rows="4"></textarea>
+          <input type="text" placeholder = 'GetEr Done!'>
       </form>
       <button type="button" class="btn btn btn-primary add">Add</button>
       <button type="button" class="btn btn btn-primary done">Done</button>
     </div>
 
     <div class = 'listItems'></div>
-    
+
     <script src="node_modules/jquery/dist/jquery.js" charset="utf-8"></script>
     <script src="node_modules/underscore/underscore.js" charset="utf-8"></script>
     <script src="templates.js" charset="utf-8"></script>
