--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="form-group">
       <h1>To-Do <small>List</small></h1>
       <form role="form">
-          <input class = 'nput-area' type="text" name="name" value="">
+          <input class = 'input-area' type="text" name="name" value="">
       </form>
       <button type="button" class="btn btn btn-primary add">Add</button>
       <button type="button" class="btn btn btn-primary done">Done</button>
